[package]
name = "netspeedmon"
version = "0.0.2"
authors = ["Christos Katsakioris <ckatsak@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/ckatsak/netspeedmon"
readme = "README.md"
edition = "2018"
keywords = ["cli", "networking"]
categories = ["command-line-utilities", "visualization"]
description = "Command line utility to periodically measure, plot and report network statistics"

[dependencies]
anyhow = "1"
config = "0.11"
chrono = { version = "~0.4", features = ["serde"] }
tokio = { version = "^1.11", features = ["full"] }
futures = "~0.3"
async-trait = "~0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
humantime = "~2"
humantime-serde = "1.0"
tracing = "~0.1"
tracing-subscriber = { version = "~0.2", features = ["fmt"] }
#tracing-futures = "~0.2"
warp = { version = "~0.3", optional = true }
plotters = { version = "~0.3", optional = true }

[dependencies.clap]
version = "~3.0.0-beta.4"
default-features = false
features = ["std", "cargo", "suggestions", "color", "wrap_help"]

[dependencies.egg-mode]
version = "~0.16"
default-features = false
features = ["rustls_webpki"]  # rustls over openssl; built-in certs over OS's
optional = true

[dependencies.speedtestr]
git = "https://github.com/zpeters/speedtestr"
rev = "5472ab54f7e0e1c66b1fb306ee77de9c395f70cb"
optional = true

[features]
default = ["http", "plot"]
http = ["warp"]
twitter = ["egg-mode"]
plot = ["plotters"]
zpeters = ["speedtestr"]

[profile.release]
lto = true
